Strengthen BuildExperimentSpec, and use it instead of a few other types doing the same thing.
There's more convergence to happen on the cross version side.